--- a/src/main/webapp/errors/error404.html
+++ b/src/main/webapp/errors/error404.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- 	<error-page>
+ 	<error-page>
 	<error-code>404</error-code>
 	<location>/errors/error404.html</location>
-	</error-page> -->
+	</error-page> 
     
 <meta charset="UTF-8">
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
